[package]
name = "mongo-rust-yt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.7.0", features = ["serde_with-3", "chrono-0_4"] }
chrono = { version = "0.4.31", features = ["serde"] }
futures = { version = "0.3.28", default-features = false, features = [
    "async-await",
] }
mongodb = "2.6.1"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
warp = "0.3.5"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
